--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_messages">Messages</string>
+    <string name="etMessage">Message text</string>
+    <string name="btnSend">Send</string>
+    <string name="etContact">Name of contact</string>
+    <string name="btnContact">Contact!</string>
 </resources>
